False alarm trying to add object to group: "dependency cycle detected" #40230

Closed
opened 2014-05-17 01:48:58 +02:00 by Willi · 5 comments

System Information
Win7/64

Blender Version
Worked: 2.67b
Broken: 2.68a
Broken: blender-2.70-be980b9-win64

Short description of error
Whenever an object belongs to group A, it can not be added to group B if there is already an instance of group A belonging to group B because the message "Could not add the group because of dependency cycle detected" occurs.

Exact steps for others to reproduce the error

  • Open GroupCyclicDependency.blend
  • Add an instance of group "Arm" and rotate it by 180°
  • Make the body the parent of the group instance.
  • Add the group instance to the group "Person".
  • Select the two cylinders on the right and also try to add them to group "Person". This fails with the message that a dependency cycle is detected. IMO, this is a false alarm.
**System Information** Win7/64 **Blender Version** Worked: 2.67b Broken: 2.68a Broken: blender-2.70-be980b9-win64 **Short description of error** Whenever an object belongs to group A, it can not be added to group B if there is already an instance of group A belonging to group B because the message "Could not add the group because of dependency cycle detected" occurs. **Exact steps for others to reproduce the error** - Open [GroupCyclicDependency.blend](https://archive.blender.org/developer/F89252/GroupCyclicDependency.blend) - Add an instance of group "Arm" and rotate it by 180° - Make the body the parent of the group instance. - Add the group instance to the group "Person". - Select the two cylinders on the right and also try to add them to group "Person". This fails with the message that a dependency cycle is detected. IMO, this is a false alarm.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Lukas Tönne self-assigned this 2014-05-17 17:43:22 +02:00

This issue was referenced by 003387fab5

This issue was referenced by 003387fab543711495e2ceb80a663d7f79fcf447
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 003387fab5.

Closed by commit 003387fab5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40230
No description provided.